--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,4 @@
 <resources>
     <string name="app_name">SalmaVereniceSolisSegura</string>
-    <string name="default_web_client_id" translatable="false">545838385247-1r0f8g37amuh66lp1fqe66nlspgq6a7a.apps.googleusercontent.com</string>
+    <string name="default_web_client_id">545838385247-b7vvkiurpfm7f6dvegkirl0ucv4dtahb.apps.googleusercontent.com</string>
 </resources>
